infrastructure/tf/manifests/backend-sentiment.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-port-80
  namespace: backend
spec:
  podSelector:
    matchLabels:
      app: sentiment
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentiment
  template:
    metadata:
      labels:
        app: sentiment
    spec:
      containers:
      - name: sentiment
        image: nmywrld/ctrlaltelite-sentiment:latest
        ports:
        - containerPort: 8012
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: sentiment-service
  namespace: backend
  annotations:
    cloud.google.com/backend-config: '{"default": "backend-config"}'
spec:
  selector:
    app: sentiment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8012
  type: ClusterIP
