infrastructure/tf/manifests/service-database.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-port-80
  namespace: service
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  namespace: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: nmywrld/ctrlaltelite-database:latest
        ports:
        - containerPort: 8011
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: service
  annotations:
    cloud.google.com/backend-config: '{"default": "service-config"}'
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8011
  type: ClusterIP
